text and fix issue with nowrap on titles

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -82,11 +82,6 @@
 
 @media screen and (max-width: 900px) {
   .container {
-    contact-page {
-      box-sizing: border-box;
-      width: 100%;
-    }
-
     .contact-form {
       box-sizing: border-box;
     }
