--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -33,6 +33,8 @@
     font-size: 53px;
     display: flex;
     flex-wrap: wrap;
+    text-shadow: 0 5px 5px #a970ff;
+    font-weight: 400;
   }
 }
 
